# sampleology

./: .gitignore  .pre-commit-config.yaml  README.md  notes.md  pyproject.toml
sampleology/: __init__.py  lm.py
tests/: test_add.py  test_lm.py
